feat: add filter to remove non-ainu lemma from wiktionary

--- a/dictionary/jawikt/extract_words.ipynb
+++ b/dictionary/jawikt/extract_words.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,6 @@
     "import requests\n",
     "\n",
     "\n",
-    "\n",
     "with tempfile.TemporaryDirectory() as temp_dir:\n",
     "    downloaded_path = Path(temp_dir) / \"jawiktionary-latest-pages-articles-multistream.xml.bz2\"\n",
     "\n",
@@ -89,9 +88,59 @@
     "\n",
     "    print(\"Finished decompressing\")\n",
     "\n",
-    "    wiktionary.extract_ainu_entries(str(decompressed_path), str(wiktionary_ainu_entries_json_path))\n",
+    "    wiktionary_dump_extractor.extract_ainu_entries(\n",
+    "        str(decompressed_path), str(wiktionary_ainu_entries_json_path)\n",
+    "    )\n",
     "\n",
-    "    print(\"Finished extracting\")\n"
+    "    print(\"Finished extracting\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import TypedDict\n",
+    "\n",
+    "class Entry(TypedDict):\n",
+    "    title: str\n",
+    "    text: str"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Filter out non-Ainu entries\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "import regex as re\n",
+    "\n",
+    "wiktionary_ainu_entries_filtered_json_path = OUTPUT_DIR / \"wiktionary_ainu_entries_filtered.json\"\n",
+    "\n",
+    "with open(wiktionary_ainu_entries_json_path, \"r\") as f:\n",
+    "    wiktionary_ainu_entries: list[Entry] = json.load(f)\n",
+    "\n",
+    "filtered_entries = [\n",
+    "    entry for entry in wiktionary_ainu_entries\n",
+    "    if re.match(r\"^[\\p{sc=Latn}=\\- '’]+$\", entry[\"title\"])\n",
+    "]\n",
+    "\n",
+    "with open(wiktionary_ainu_entries_filtered_json_path, \"w\", encoding=\"utf-8\") as f:\n",
+    "    json.dump(filtered_entries, f, ensure_ascii=False, indent=4)\n",
+    "\n",
+    "\n",
+    "# wiktionary_ainu_entries = [\n",
+    "#     entry for entry in wiktionary_ainu_entries if entry[\"title\"]\n",
+    "# ]"
    ]
   },
   {
@@ -103,18 +152,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "abc5dbb382d94398ae1f45e3563ddc2f",
+       "model_id": "82020726f42340d79d10add24e3d63ae",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/2318 [00:00<?, ?it/s]"
+       "  0%|          | 0/2256 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -158,8 +207,8 @@
     "import json\n",
     "import regex as re\n",
     "\n",
-    "with open(wiktionary_ainu_entries_json_path, \"r\") as f:\n",
-    "    wiktionary_ainu_entries = json.load(f)\n",
+    "with open(wiktionary_ainu_entries_filtered_json_path, \"r\") as f:\n",
+    "    wiktionary_ainu_entries: list[Entry] = json.load(f)\n",
     "\n",
     "\n",
     "valid_entries = {}\n",
@@ -264,18 +313,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "80a396a1463a4e3b8b33d9ca08c0a403",
+       "model_id": "a5a8e92a366d485799f769a7ae291df3",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/2318 [00:00<?, ?it/s]"
+       "  0%|          | 0/2256 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -286,8 +335,8 @@
     "import json\n",
     "import regex as re\n",
     "\n",
-    "with open(wiktionary_ainu_entries_json_path, \"r\") as f:\n",
-    "    wiktionary_ainu_entries = json.load(f)\n",
+    "with open(wiktionary_ainu_entries_filtered_json_path, \"r\") as f:\n",
+    "    wiktionary_ainu_entries: list[Entry] = json.load(f)\n",
     "\n",
     "from collections import defaultdict\n",
     "# map from morpheme to its etymology\n",
@@ -325,34 +374,6 @@
     "    )\n",
     "\n",
     "    # print(entry[\"text\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "77db78bca4434f52aed9316136e5bdf6",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/2318 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "# find ?\n",
-    "for entry in tqdm(iterable=wiktionary_ainu_entries):\n",
-    "    text = entry[\"text\"]\n",
-    "    if \"{{etym}}\" in text or \"語源\" in text:\n",
-    "        print(text)\n"
    ]
   }
  ],
