feat: add advanced filtering to wiktionary items

--- a/dictionary/jawikt/extract_words.ipynb
+++ b/dictionary/jawikt/extract_words.ipynb
@@ -26,7 +26,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Extract Ainu entries from Japanese Wiktionary dump data"
+    "## Extract Ainu entries from Japanese Wiktionary dump data"
    ]
   },
   {
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,12 +112,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Filter out non-Ainu entries\n"
+    "## Filter out non-Ainu sections\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,14 +133,46 @@
     "    entry for entry in wiktionary_ainu_entries\n",
     "    if re.match(r\"^[\\p{sc=Latn}=\\- '’]+$\", entry[\"title\"])\n",
     "]\n",
-    "\n",
-    "with open(wiktionary_ainu_entries_filtered_json_path, \"w\", encoding=\"utf-8\") as f:\n",
-    "    json.dump(filtered_entries, f, ensure_ascii=False, indent=4)\n",
-    "\n",
-    "\n",
     "# wiktionary_ainu_entries = [\n",
     "#     entry for entry in wiktionary_ainu_entries if entry[\"title\"]\n",
     "# ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from wiktionary.document import Document\n",
+    "\n",
+    "filtered_ainu_entries: dict[str, str] = {}\n",
+    "for entry in wiktionary_ainu_entries:\n",
+    "    doc = Document.from_wikitext(entry[\"text\"])\n",
+    "    for section in doc.sections:\n",
+    "        if section.title not in [\n",
+    "            \"{{ain}}\",\n",
+    "            \"{{L|ain}}\",\n",
+    "            \"アイヌ語\",\n",
+    "            \"[[:Category:{{ain}}|{{ain}}]]\",\n",
+    "            \"[[:Category:{{ain}}|{{ain}}]]== <!--これは標準の内容の展開です。書き換えないでください-->\",\n",
+    "        ]:\n",
+    "            continue\n",
+    "        filtered_ainu_entries[entry[\"title\"]] = str(object=section)\n",
+    "        break\n",
+    "    # except Exception as e:\n",
+    "    #     print(e)\n",
+    "    #     print(entry[\"text\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(wiktionary_ainu_entries_filtered_json_path, \"w\", encoding=\"utf-8\") as f:\n",
+    "    json.dump(filtered_ainu_entries, f, ensure_ascii=False, indent=4)"
    ]
   },
   {
@@ -152,18 +184,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "82020726f42340d79d10add24e3d63ae",
+       "model_id": "80a2c121881740c49896b1e5c359a8e8",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/2256 [00:00<?, ?it/s]"
+       "  0%|          | 0/2259 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -173,14 +205,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ma\n",
-      "hima\n",
-      "tagis\n",
-      "asu\n",
-      "num\n",
-      "pitu\n",
-      "siva\n",
-      "chwast\n",
+      "orun\n",
       "----------------------------------------------------------------------------------------------------\n",
       "adnom\n",
       "adv\n",
@@ -208,13 +233,13 @@
     "import regex as re\n",
     "\n",
     "with open(wiktionary_ainu_entries_filtered_json_path, \"r\") as f:\n",
-    "    wiktionary_ainu_entries: list[Entry] = json.load(f)\n",
+    "    wiktionary_ainu_entries: dict[str, str] = json.load(f)\n",
     "\n",
     "\n",
     "valid_entries = {}\n",
-    "for entry in tqdm(wiktionary_ainu_entries):\n",
-    "    if re.search(r\"^[a-z=\\-]+$\", entry[\"title\"]):\n",
-    "        valid_entries[entry[\"title\"]] = entry[\"text\"]\n",
+    "for title, text in tqdm(list(wiktionary_ainu_entries.items())):\n",
+    "    if re.search(r\"^[a-z=\\-]+$\", title):\n",
+    "        valid_entries[title] = text\n",
     "\n",
     "MAP = {\n",
     "    \"後置副詞\": \"postpadv\",\n",
@@ -313,18 +338,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a5a8e92a366d485799f769a7ae291df3",
+       "model_id": "5cfc3b3e13214d8a81b6e8a26528d2ac",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/2256 [00:00<?, ?it/s]"
+       "  0%|          | 0/2259 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -336,15 +361,15 @@
     "import regex as re\n",
     "\n",
     "with open(wiktionary_ainu_entries_filtered_json_path, \"r\") as f:\n",
-    "    wiktionary_ainu_entries: list[Entry] = json.load(f)\n",
+    "    wiktionary_ainu_entries: dict[str, str] = json.load(f)\n",
     "\n",
     "from collections import defaultdict\n",
     "# map from morpheme to its etymology\n",
     "dictionary: dict[str, set[str]] = defaultdict(set)\n",
     "\n",
-    "for entry in tqdm(iterable=wiktionary_ainu_entries):\n",
-    "    if re.search(r\"\\{\\{affix\\|ain\\|.*?\\}\\}\", entry[\"text\"]):\n",
-    "        for affix in re.finditer(r\"\\{\\{affix\\|ain\\|(.*)\\}\\}[。<]?\", entry[\"text\"]):\n",
+    "for title, text in tqdm(list(wiktionary_ainu_entries.items())):\n",
+    "    if re.search(r\"\\{\\{affix\\|ain\\|.*?\\}\\}\", text):\n",
+    "        for affix in re.finditer(r\"\\{\\{affix\\|ain\\|(.*)\\}\\}[。<]?\", text):\n",
     "            arguments = affix.group(1).replace(\"{{=}}\", \"=\").split(\"|\")\n",
     "            # print(arguments)\n",
     "\n",
