feat: export compositions from Wiktionary

--- a/dictionary/jawikt/extract_words.ipynb
+++ b/dictionary/jawikt/extract_words.ipynb
@@ -338,13 +338,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5cfc3b3e13214d8a81b6e8a26528d2ac",
+       "model_id": "ad07732987bf46c99d8c5437d3f224fa",
        "version_major": 2,
        "version_minor": 0
       },
@@ -366,6 +366,9 @@
     "from collections import defaultdict\n",
     "# map from morpheme to its etymology\n",
     "dictionary: dict[str, set[str]] = defaultdict(set)\n",
+    "\n",
+    "# map from term to its composition and glossing\n",
+    "composition_dictionary: dict[str, list[tuple[str, str]]] = defaultdict(list)\n",
     "\n",
     "for title, text in tqdm(list(wiktionary_ainu_entries.items())):\n",
     "    if re.search(r\"\\{\\{affix\\|ain\\|.*?\\}\\}\", text):\n",
@@ -392,10 +395,15 @@
     "                if f\"t{i+1}\" in keyword_arguments and keyword_arguments[f\"t{i+1}\"] != \"\":\n",
     "                    gloss = keyword_arguments[f\"t{i+1}\"].replace(\"～を\", \"\").split(\"}}\")[0]\n",
     "                    dictionary[argument].add(gloss)\n",
-    "\n",
+    "                    composition_dictionary[title].append((argument, gloss))\n",
     "with open(OUTPUT_DIR / \"wiktionary_ainu_glossed_morphemes.json\", \"w\", encoding=\"utf-8\") as f:\n",
     "    json.dump(\n",
     "        {k: list(v) for k, v in dictionary.items()}, f, ensure_ascii=False, indent=4\n",
+    "    )\n",
+    "\n",
+    "with open(OUTPUT_DIR / \"wiktionary_ainu_word_compositions.json\", \"w\", encoding=\"utf-8\") as f:\n",
+    "    json.dump(\n",
+    "        {k: [tuple(t) for t in v] for k, v in composition_dictionary.items()}, f, ensure_ascii=False, indent=4\n",
     "    )\n",
     "\n",
     "    # print(entry[\"text\"])"
