feat: add gloss extraction to tommy

--- a/dictionary/tommy1949/00_extract_words.ipynb
+++ b/dictionary/tommy1949/00_extract_words.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,6 +126,52 @@
     "    writer = csv.DictWriter(f, fieldnames=extracted_rows[0].keys(), delimiter=\"\\t\")\n",
     "    writer.writeheader()\n",
     "    writer.writerows(extracted_rows)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Extract explanation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import regex as re\n",
+    "import json\n",
+    "from typing import TypedDict\n",
+    "\n",
+    "class Gloss(TypedDict):\n",
+    "    lemma: str\n",
+    "    glosses: list[str]\n",
+    "\n",
+    "cleaned_glosses: list[Gloss] = []\n",
+    "\n",
+    "for row in extracted_rows:\n",
+    "    explanation = row[\"explanation\"]\n",
+    "    explanation = re.sub(r\"\\[.*\\]\", \"\", explanation)\n",
+    "    explanation = re.sub(r\"＜.*＞\", \"\", explanation)\n",
+    "    explanation = re.sub(r\"[(（].*[)）]\", \"\", explanation)\n",
+    "    explanation = re.sub(r\"[①②③④⑤⑥⑦⑧⑨⑩]\", \"\", explanation)\n",
+    "    explanation = re.sub(r\"◆.*$\", \"\", explanation)\n",
+    "    explanation = re.sub(r\"\\s+\", \"\", explanation)\n",
+    "    explanation = re.sub(r\"→.*\", \"\", explanation)\n",
+    "    explanation = re.sub(r\"＊.*\", \"\", explanation)\n",
+    "    explanation = re.sub(r\"＝.*\", \"\", explanation)\n",
+    "    explanation = re.sub(r\"「(.*?)」を[示表]す.*\", \"\\1\", explanation)\n",
+    "    cleaned_explanation = []\n",
+    "    for item in re.split(r\"、|\\d+[.．]\", explanation):\n",
+    "        if item and not re.match(r\"[\\p{scx=Latn}\\p{P}+]\", item):\n",
+    "            cleaned_explanation.append(item)\n",
+    "    if cleaned_explanation:\n",
+    "        cleaned_glosses.append({\"lemma\": row[\"lemma\"], \"glosses\": cleaned_explanation})\n",
+    "\n",
+    "with open(OUTPUT_DIR / \"tommy1949_aynudictionary_glosses.json\", \"w\") as f:\n",
+    "    json.dump(cleaned_glosses, f, ensure_ascii=False)\n"
    ]
   }
  ],
