feat: update PDF conversion output and improve file deletion logic

--- a/text/convert_pdf_to_images.ipynb
+++ b/text/convert_pdf_to_images.ipynb
@@ -16,7 +16,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Converted KJ00004166033.pdf to pngs\n"
+      "Converted sem1608.pdf to pngs\n"
      ]
     }
    ],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,8 @@
     "\n",
     "    cropped_image_dir = Path(\"output\") / crop_path.stem / \"cropped\"\n",
     "    for file in cropped_image_dir.glob(\"**/*\"):\n",
-    "        file.unlink()\n",
+    "        if file.is_file():\n",
+    "            file.unlink()\n",
     "    cropped_image_dir.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "    pages = sorted(image_dir.glob(\"*.png\"))\n",
@@ -104,7 +105,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
