feat: regenerate combined glosses

--- a/dictionary/generate_combined_glosses.ipynb
+++ b/dictionary/generate_combined_glosses.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -33,18 +33,18 @@
       "9\ta p\t['～したものの～したのだが～だったが']\n",
       "10\ta=\t['一般的に人は～する', 'ここの皆で～する']\n",
       "11\ta=\t['その人が']\n",
-      "Wiktionary: 2238\n",
+      "Wiktionary: 2231\n",
       "0\twan\t['十人', '十']\n",
       "1\ttu\t['両方', '第二', '二つ', '多くの', '二人', '沢山の']\n",
       "2\trak\t['～の気配がある', '～の匂いがする', '～の味がある']\n",
-      "3\tmi\t['(他動詞)～を着る (布団に入る場合にも使う)']\n",
+      "3\tmi\t['～を着る']\n",
       "4\ton\t['発酵する']\n",
       "5\tona\t['父親']\n",
       "6\tay\t['矢']\n",
-      "7\toro\t['～の場所（位置や方向', '強調する', '～の所', '場所をあらわす名詞の後に置いて', '時間）として扱えない名詞の後に置いて場所を表す名詞句を作る', '所属形 oro ですでに言及した場所を示す']\n",
+      "7\toro\t['強調する', '～の所', '場所をあらわす名詞の後に置いて', '～の場所として扱えない名詞の後に置いて場所を表す名詞句を作る', '所属形 oro ですでに言及した場所を示す']\n",
       "8\the\t['～か']\n",
       "9\ti\t['意味的に目的語を補い', 'それ', 'tranverb}}を{{intrverb}}化する']\n",
-      "10\tne\t['～に（なる', 'する）']\n",
+      "10\tne\t['～に']\n",
       "11\tsi\t[]\n"
      ]
     }
@@ -118,25 +118,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "15508\n",
+      "15499\n",
       "wan\t['十人', '十']\n",
       "tu\t['両方', '第二', '二つ', '多くの', '二人', '沢山の']\n",
       "rak\t['～の気配がある', '～の匂いがする', '～の味がある']\n",
-      "mi\t['(他動詞)～を着る (布団に入る場合にも使う)']\n",
+      "mi\t['～を着る']\n",
       "on\t['発酵する']\n",
       "ona\t['父親']\n",
       "ay\t['矢']\n",
-      "oro\t['～の場所（位置や方向', '強調する', '～の所', '場所をあらわす名詞の後に置いて', '時間）として扱えない名詞の後に置いて場所を表す名詞句を作る', '所属形 oro ですでに言及した場所を示す']\n",
+      "oro\t['強調する', '～の所', '場所をあらわす名詞の後に置いて', '～の場所として扱えない名詞の後に置いて場所を表す名詞句を作る', '所属形 oro ですでに言及した場所を示す']\n",
       "he\t['～か']\n",
       "i\t['意味的に目的語を補い', 'それ', 'tranverb}}を{{intrverb}}化する']\n",
-      "ne\t['～に（なる', 'する）']\n",
+      "ne\t['～に']\n",
       "ni\t['木']\n"
      ]
     }
