feat: add more translations by AI

--- a/dictionary/generate_karahuto_data.ipynb
+++ b/dictionary/generate_karahuto_data.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,70 +170,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Extend with AI translations"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "input/sakhalin/ff-ainu-karahuto-terms-with-corpus-translated-12.json\n",
-      "input/sakhalin/ff-ainu-karahuto-terms-with-corpus-translated-2.json\n",
-      "input/sakhalin/ff-ainu-karahuto-terms-with-corpus-translated-20.json\n",
-      "input/sakhalin/ff-ainu-karahuto-terms-with-corpus-translated-8.json\n",
-      "input/sakhalin/ff-ainu-karahuto-terms-with-corpus-translated-15.json\n",
-      "input/sakhalin/ff-ainu-karahuto-terms-with-corpus-translated-4.json\n",
-      "input/sakhalin/ff-ainu-karahuto-terms-with-corpus-translated-1.json\n",
-      "input/sakhalin/ff-ainu-karahuto-terms-with-corpus-translated-13.json\n",
-      "input/sakhalin/ff-ainu-karahuto-terms-with-corpus-translated-16.json\n",
-      "input/sakhalin/ff-ainu-karahuto-terms-with-corpus-translated-10.json\n",
-      "input/sakhalin/ff-ainu-karahuto-terms-with-corpus-translated-19.json\n",
-      "input/sakhalin/ff-ainu-karahuto-terms-with-corpus-translated-7.json\n",
-      "input/sakhalin/ff-ainu-karahuto-terms-with-corpus-translated-14.json\n",
-      "input/sakhalin/ff-ainu-karahuto-terms-with-corpus-translated-17.json\n",
-      "input/sakhalin/ff-ainu-karahuto-terms-with-corpus-translated-0.json\n",
-      "input/sakhalin/ff-ainu-karahuto-terms-with-corpus-translated-9.json\n",
-      "input/sakhalin/ff-ainu-karahuto-terms-with-corpus-translated-3.json\n",
-      "input/sakhalin/ff-ainu-karahuto-terms-with-corpus-translated-11.json\n",
-      "input/sakhalin/ff-ainu-karahuto-terms-with-corpus-translated-18.json\n",
-      "input/sakhalin/ff-ainu-karahuto-terms-with-corpus-translated-5.json\n",
-      "input/sakhalin/ff-ainu-karahuto-terms-with-corpus-translated-6.json\n"
-     ]
-    }
-   ],
-   "source": [
-    "from pathlib import Path\n",
-    "\n",
-    "\n",
-    "for file in (Path(\"input\") / \"sakhalin\").glob(\n",
-    "    \"ff-ainu-karahuto-terms-with-corpus-translated-*.json\"\n",
-    "):\n",
-    "    print(file)\n",
-    "    with open(file) as f:\n",
-    "        translated = json.load(f)\n",
-    "\n",
-    "        for term in terms:\n",
-    "            if term[\"lemma\"] in translated:\n",
-    "                term[\"ja\"] = translated[term[\"lemma\"]][\"ja\"]\n",
-    "                term[\"en\"] = translated[term[\"lemma\"]][\"en\"]\n",
-    "                term[\"ru\"] = translated[term[\"lemma\"]][\"ru\"]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Add words from corpus"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
@@ -794,18 +736,18 @@
       "renka already has ja glosses\n",
       "ama already has ja glosses\n",
       "apunitara already has ja glosses\n",
-      "arawanpe already has ja glosses\n"
+      "arawanpe already has ja glosses\n",
+      "aw already has ja glosses\n",
+      "ca already has ja glosses\n",
+      "cas already has ja glosses\n",
+      "cispo already has ja glosses\n",
+      "ciw already has ja glosses\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "aw already has ja glosses\n",
-      "ca already has ja glosses\n",
-      "cas already has ja glosses\n",
-      "cispo already has ja glosses\n",
-      "ciw already has ja glosses\n",
       "ekari already has ja glosses\n",
       "ekasure already has ja glosses\n",
       "epes already has ja glosses\n",
@@ -919,22 +861,75 @@
     "\n",
     "    for lemma, glosses in combined_glosses.items():\n",
     "        t = next((t for t in terms if t[\"lemma\"] == lemma), None)\n",
-    "        if t is None:\n",
-    "            terms.append({\n",
-    "                \"lemma\": lemma,\n",
-    "                \"ja\": glosses,\n",
-    "                \"en\": [],\n",
-    "                \"ru\": [],\n",
-    "                \"poses\": [],\n",
-    "                \"frequency\": 0,\n",
-    "                \"cognates\": [],\n",
-    "                \"noncognates\": [],\n",
-    "            })\n",
-    "        else:\n",
+    "        if t is not None:\n",
     "            if not t[\"ja\"]:\n",
     "                t[\"ja\"] = glosses\n",
     "            else:\n",
     "                print(f\"{lemma} already has ja glosses\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Extend with AI translations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "input/sakhalin/ff-ainu-karahuto-terms-with-corpus-translated-25.json\n",
+      "input/sakhalin/ff-ainu-karahuto-terms-with-corpus-translated-12.json\n",
+      "input/sakhalin/ff-ainu-karahuto-terms-with-corpus-translated-22.json\n",
+      "input/sakhalin/ff-ainu-karahuto-terms-with-corpus-translated-2.json\n",
+      "input/sakhalin/ff-ainu-karahuto-terms-with-corpus-translated-20.json\n",
+      "input/sakhalin/ff-ainu-karahuto-terms-with-corpus-translated-24.json\n",
+      "input/sakhalin/ff-ainu-karahuto-terms-with-corpus-translated-8.json\n",
+      "input/sakhalin/ff-ainu-karahuto-terms-with-corpus-translated-26.json\n",
+      "input/sakhalin/ff-ainu-karahuto-terms-with-corpus-translated-15.json\n",
+      "input/sakhalin/ff-ainu-karahuto-terms-with-corpus-translated-4.json\n",
+      "input/sakhalin/ff-ainu-karahuto-terms-with-corpus-translated-1.json\n",
+      "input/sakhalin/ff-ainu-karahuto-terms-with-corpus-translated-21.json\n",
+      "input/sakhalin/ff-ainu-karahuto-terms-with-corpus-translated-13.json\n",
+      "input/sakhalin/ff-ainu-karahuto-terms-with-corpus-translated-16.json\n",
+      "input/sakhalin/ff-ainu-karahuto-terms-with-corpus-translated-10.json\n",
+      "input/sakhalin/ff-ainu-karahuto-terms-with-corpus-translated-23.json\n",
+      "input/sakhalin/ff-ainu-karahuto-terms-with-corpus-translated-19.json\n",
+      "input/sakhalin/ff-ainu-karahuto-terms-with-corpus-translated-7.json\n",
+      "input/sakhalin/ff-ainu-karahuto-terms-with-corpus-translated-14.json\n",
+      "input/sakhalin/ff-ainu-karahuto-terms-with-corpus-translated-17.json\n",
+      "input/sakhalin/ff-ainu-karahuto-terms-with-corpus-translated-0.json\n",
+      "input/sakhalin/ff-ainu-karahuto-terms-with-corpus-translated-9.json\n",
+      "input/sakhalin/ff-ainu-karahuto-terms-with-corpus-translated-3.json\n",
+      "input/sakhalin/ff-ainu-karahuto-terms-with-corpus-translated-11.json\n",
+      "input/sakhalin/ff-ainu-karahuto-terms-with-corpus-translated-18.json\n",
+      "input/sakhalin/ff-ainu-karahuto-terms-with-corpus-translated-5.json\n",
+      "input/sakhalin/ff-ainu-karahuto-terms-with-corpus-translated-6.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pathlib import Path\n",
+    "\n",
+    "\n",
+    "for file in (Path(\"input\") / \"sakhalin\").glob(\n",
+    "    \"ff-ainu-karahuto-terms-with-corpus-translated-*.json\"\n",
+    "):\n",
+    "    print(file)\n",
+    "    with open(file) as f:\n",
+    "        translated = json.load(f)\n",
+    "\n",
+    "        for term in terms:\n",
+    "            if term[\"lemma\"] in translated:\n",
+    "                term[\"ja\"] = translated[term[\"lemma\"]][\"ja\"]\n",
+    "                term[\"en\"] = translated[term[\"lemma\"]][\"en\"]\n",
+    "                term[\"ru\"] = translated[term[\"lemma\"]][\"ru\"]"
    ]
   },
   {
@@ -946,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -969,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
@@ -1026,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1061,7 +1056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1074,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1091,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [
     {
@@ -2242,7 +2237,6 @@
       "{\"lemma\": \"aaa\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 2},\n",
       "{\"lemma\": \"ankemahaa\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 2},\n",
       "{\"lemma\": \"iyontehtehe\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 2},\n",
-      "{\"lemma\": \"ekos\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 2},\n",
       "{\"lemma\": \"yaykoherawkihci\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 2},\n",
       "{\"lemma\": \"amahka\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 2},\n",
       "{\"lemma\": \"ankowente\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 2},\n",
@@ -2517,16 +2511,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "All terms: 17781\n",
-      "All translated: 16388\n",
-      "Translated only ja: 15200\n"
+      "All terms: 2782\n",
+      "All translated: 1390\n",
+      "Translated only ja: 0\n"
      ]
     }
    ],
@@ -2542,75 +2536,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "61\n",
-      "250\n",
-      "250\n",
-      "250\n",
-      "250\n",
-      "250\n",
-      "250\n",
-      "250\n",
-      "250\n",
-      "250\n",
-      "250\n",
-      "250\n",
-      "250\n",
-      "250\n",
-      "250\n",
-      "250\n",
-      "250\n",
-      "250\n",
-      "250\n",
-      "250\n",
-      "250\n",
-      "250\n",
-      "250\n",
-      "250\n",
-      "250\n",
-      "250\n",
-      "250\n",
-      "250\n",
-      "250\n",
-      "250\n",
-      "250\n",
-      "250\n",
-      "250\n",
-      "250\n",
-      "250\n",
-      "250\n",
-      "250\n",
-      "250\n",
-      "250\n",
-      "250\n",
-      "250\n",
-      "250\n",
-      "250\n",
-      "250\n",
-      "250\n",
-      "250\n",
-      "250\n",
-      "250\n",
-      "250\n",
-      "250\n",
-      "250\n",
-      "250\n",
-      "250\n",
-      "250\n",
-      "250\n",
-      "250\n",
-      "250\n",
-      "250\n",
-      "250\n",
-      "250\n",
-      "250\n",
-      "200\n"
+      "0\n"
      ]
     }
    ],
